--- a/index.html
+++ b/index.html
@@ -1,33 +1,3 @@
-Skip to content
-Search or jump to…
-Pull requests
-Issues
-Codespaces
-Marketplace
-Explore
- 
-@ZagarovaGS 
-ZagarovaGS
-/
-Plants
-Public
-Code
-Issues
-Pull requests
-Actions
-Projects
-Wiki
-Security
-Insights
-Settings
-Plants/plants/index.html
-@ZagarovaGS
-ZagarovaGS Add files via upload
-Latest commit 71d44f0 7 minutes ago
- History
- 1 contributor
-182 lines (179 sloc)  9.35 KB
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -36,7 +6,7 @@ Latest commit 71d44f0 7 minutes ago
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plants</title>
-    <link rel="stylesheet" href="/plants/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
