--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <p class="service_img_desription">Lorem Ipsum has been the industry</p>
                 </li>
                 <li class="service_image">
-                    <img src="/img/service_img/planting2.png" alt="planting2">
+                    <img src="../img/service_img/planting2.png" alt="planting2">
                     <p class="text">Planting</p>
                     <p class="service_img_desription">Lorem Ipsum has been the industry</p>
                 </li>
