--- a/plants/index.html
+++ b/plants/index.html
@@ -13,7 +13,7 @@
     <header class="header">
         <div class="header-description">
             <div class="header-img">
-                <img src="./img/header_img/Vector 1.svg" alt="plants1">
+                <img src="./img/header_img/Vector_1.svg" alt="plants1">
                 <img src="./img/header_img/Vector 2.svg" class="leaf2" alt="plants2">
             </div>
             <p class="description-text">Plants</p>
