--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="header-description">
             <div class="header-img">
                 <img src="./img/header_img/Vector_1.svg" alt="plants1">
-                <img src="./img/header_img/Vector 2.svg" class="leaf2" alt="plants2">
+                <img src="./img/header_img/Vector_2.svg" class="leaf2" alt="plants2">
             </div>
             <p class="description-text">Plants</p>
         </div>
@@ -32,14 +32,14 @@
         <section class="welcome">
             <div class="welcome-img">
                 <div class="leafs1-2">
-                    <img src="./img/welcome_img/leaf 2.png" class="leaf-2" alt="leaf 2">
-                    <img src="./img/welcome_img/leaf 1.png" class="leaf-1" alt="leaf 1">
+                    <img src="./img/welcome_img/leaf_2.png" class="leaf-2" alt="leaf 2">
+                    <img src="./img/welcome_img/leaf_1.png" class="leaf-1" alt="leaf 1">
                 </div>
-                <img src="./img/welcome_img/leaf 4.png" class="leaf-4" alt=" leaf-4">
+                <img src="./img/welcome_img/leaf_4.png" class="leaf-4" alt=" leaf-4">
                 <div class="leafs3-5">
-                    <img src="./img/welcome_img/leaf 3.png" alt="leaf-3">
+                    <img src="./img/welcome_img/leaf_3.png" alt="leaf-3">
                     <div class="leaf-5">
-                        <img src="./img/welcome_img/leaf 5.png" alt="leaf-5">
+                        <img src="./img/welcome_img/leaf_5.png" alt="leaf-5">
                     </div>
                 </div>
             </div>
