--- a/plants/index.html
+++ b/plants/index.html
@@ -14,7 +14,7 @@
         <div class="header-description">
             <div class="header-img">
                 <img src="./img/header_img/Vector_1.svg" alt="plants1">
-                <img src="./img/header_img/Vector 2.svg" class="leaf2" alt="plants2">
+                <img src="./img/header_img/Vector_2.svg" class="leaf2" alt="plants2">
             </div>
             <p class="description-text">Plants</p>
         </div>
