--- a/plants/index.html
+++ b/plants/index.html
@@ -46,7 +46,7 @@
             <div class="welcome__description">
                 <div>
                     <h1 class="welcome__header">
-                        <div class="welcome__header_part1">We grow</div>
+                        <dl class="welcome__header_part1">We grow</dl>
                     </h1>
                 </div>
                 <p class="welcome__header_text">Lorem Ipsum is simply dummy text of the printing and typesetting
