--- a/plants/index.html
+++ b/plants/index.html
@@ -44,10 +44,12 @@
                 </div>
             </div>
             <div class="welcome__description">
-                <div>
+               <div>
                     <h1 class="welcome__header">
-                        <dl class="welcome__header_part1">We grow</dl>
+                        We grow
                     </h1>
+                    <p class="welcome_header_part2">and give</p>
+                    <p class="welcome_header_part3">you oxygen</p>
                 </div>
                 <p class="welcome__header_text">Lorem Ipsum is simply dummy text of the printing and typesetting
                     industry.
