--- a/plants/index.html
+++ b/plants/index.html
@@ -62,7 +62,7 @@
                 <h2 class="about_header"><img src="./img/about_img/We are professional experienced gardeners.png"
                         alt="houseplant header"></h2>
                 <div class="about_text"><img
-                        src="./img/about_img/Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled i.png"
+                        src="./img/about_img/about_text.png"
                         alt=""></div>
             </div>
             <div class="about_img"><img src="./img/about_img/houseplant 1.png" alt="houseplant"></div>
