--- a/plants/index.html
+++ b/plants/index.html
@@ -59,7 +59,7 @@
         </section>
         <section class="about">
             <div class="about_description">
-                <h2 class="about_header"><img src="./img/about_img/We are professional experienced gardeners.png"
+                <h2 class="about_header"><img src="./img/about_img/about_header.png"
                         alt="houseplant header"></h2>
                 <div class="about_text"><img
                         src="./img/about_img/about_text.png"
