--- a/plants/index.html
+++ b/plants/index.html
@@ -65,7 +65,7 @@
                         src="./img/about_img/about_text.png"
                         alt=""></div>
             </div>
-            <div class="about_img"><img src="./img/about_img/houseplant 1.png" alt="houseplant"></div>
+            <div class="about_img"><img src="./img/about_img/houseplant_1.png" alt="houseplant"></div>
         </section>
         <section class="service">
             <div class="service_text">
