--- a/plants/index.html
+++ b/plants/index.html
@@ -69,7 +69,7 @@
         </section>
         <section class="service">
             <div class="service_text">
-                <h2 class="service__header"><img src="./img/service_img/Service and our projects.png" alt=""></h2>
+                <h2 class="service__header"><img src="./img/service_img/service_header.png" alt=""></h2>
                 <ul class="service_types">
                     <li class="service_type gardens"><img src="./img/service_img/Gardens.png" alt="gardens text"></li>
                     <li class="service_type"><img src="./img/service_img/Lawn.png" alt="lawn text"></li>
