--- a/plants/index.html
+++ b/plants/index.html
@@ -78,7 +78,7 @@
             </div>
             <ul class="service_images">
                 <li class="service_image">
-                    <img src="./img/service_img/garden care.png" alt="garden care">
+                    <img src="./img/service_img/garden_care.png" alt="garden care">
                     <p class="text">Garden care</p>
                     <p class="service_img_desription">Lorem Ipsum has been the industry</p>
                 </li>
@@ -88,7 +88,7 @@
                     <p class="service_img_desription">Lorem Ipsum has been the industry</p>
                 </li>
                 <li class="service_image">
-                    <img src="./img/service_img/lawn care.png" alt="lawn care">
+                    <img src="./img/service_img/lawn_care.png" alt="lawn care">
                     <p class="text">Lawn care</p>
                     <p class="service_img_desription">Lorem Ipsum has been the industry</p>
                 </li>
