--- a/plants/index.html
+++ b/plants/index.html
@@ -98,7 +98,7 @@
                     <p class="service_img_desription">Lorem Ipsum has been the industry</p>
                 </li>
                 <li class="service_image">
-                    <img src="./img/service_img/garden care2.png" alt="garden care2">
+                    <img src="./img/service_img/garden_care2.png" alt="garden care2">
                     <p class="text">Garden care</p>
                     <p class="service_img_desription">Lorem Ipsum has been the industry</p>
                 </li>
@@ -113,7 +113,7 @@
             <div class="prices_desrription">
                 <h2 class="prices__header">Prices</h2>
                 <ul class="prices_types">
-                    <li class="price_item"><img src="./img/prices_img/Ellipse 5 (1).svg" class="price_item__circle"
+                    <li class="price_item"><img src="./img/prices_img/Ellipse5.svg" class="price_item__circle"
                             alt="circle"><img src="./img/prices_img/Vector 3.svg" class="vector_3" alt="mark"><img
                             src="./img/prices_img/Vector 4.svg" class="vector_4" alt="mark"> <b>Basics</b>
                     </li>
