--- a/plants/index.html
+++ b/plants/index.html
@@ -117,11 +117,11 @@
                             alt="circle"><img src="./img/prices_img/Vector 3.svg" class="vector_3" alt="mark"><img
                             src="./img/prices_img/Vector 4.svg" class="vector_4" alt="mark"> <b>Basics</b>
                     </li>
-                    <li class="price_item"><img src="./img/prices_img/Ellipse 5 (1).svg" class="price_item__circle"
+                    <li class="price_item"><img src="./img/prices_img/Ellipse5.svg" class="price_item__circle"
                             alt="circle"><img src="./img/prices_img/Vector 3.svg" class="vector_3" alt="mark"><img
                             src="./img/prices_img/Vector 4.svg" class="vector_4" alt="mark"><b>Standard</b>
                     </li>
-                    <li class="price_item"><img src="./img/prices_img/Ellipse 5 (1).svg" class="price_item__circle"
+                    <li class="price_item"><img src="./img/prices_img/Ellipse5.svg" class="price_item__circle"
                             alt="circle"><img src="./img/prices_img/Vector 3.svg" class="vector_3" alt="mark"><img
                             src="./img/prices_img/Vector 4.svg" class="vector_4" alt="mark"><b>Pro care</b>
                     </li>
