--- a/plants/index.html
+++ b/plants/index.html
@@ -135,22 +135,22 @@
                 <div><button class="contact_button">Contact us</button></div>
                 <div class="prices_leafs_img">
                     <div class="leaf_2">
-                        <img src="./img/prices_img/leaf 2.png" alt="leafs">
+                        <img src="./img/prices_img/leaf_2.png" alt="leafs">
                     </div>
                     <div class="leaf_1">
-                        <img src="./img/prices_img/leaf 1.png" alt="leafs">
+                        <img src="./img/prices_img/leaf_1.png" alt="leafs">
                     </div>
                     <div class="leaf_4">
-                        <img src="./img/prices_img/leaf 4.png" alt="leafs">
+                        <img src="./img/prices_img/leaf_4.png" alt="leafs">
                     </div>
                     <div class="leaf_3">
-                        <img src="./img/prices_img/leaf 3.png" alt="leafs">
+                        <img src="./img/prices_img/leaf_3.png" alt="leafs">
                     </div>
                 </div>
             </div>
         </section>
         <section class="contacts">
-            <img src="./img/contacts_img/contact_woman 1.png" alt="" class="contact_img">
+            <img src="./img/contacts_img/contact_woman_1.png" alt="woman" class="contact_img">
             <h2 class="contacts__header">Contact us
             </h2>
             <div class="select_city">
