--- a/plants/index.html
+++ b/plants/index.html
@@ -154,10 +154,10 @@
             <h2 class="contacts__header">Contact us
             </h2>
             <div class="select_city">
-                <p class="city_header">City</p><img src="./img/contacts_img/Ellipse 5.svg" class="conacts_circle"
+                <p class="city_header">City</p><img src="./img/contacts_img/Ellipse5.svg" class="conacts_circle"
                     alt="circle">
-                <img src="./img/contacts_img/Vector 3.svg" class="contacts_vector_3" alt="mark"> <img
-                    src="./img/contacts_img/Vector 4.svg" class="contacts_vector_4" alt="mark">
+                <img src="./img/contacts_img/Vector_3.svg" class="contacts_vector_3" alt="mark"> <img
+                    src="./img/contacts_img/Vector_4.svg" class="contacts_vector_4" alt="mark">
             </div>
         </section>
         <footer class="footer">
