--- a/plants/index.html
+++ b/plants/index.html
@@ -71,7 +71,7 @@
             <div class="service_text">
                <h2 class="service__header">Service and our projects</h2>
                 <ul class="service_types">
-                    <li class="service_type gardens"><img src="./img/service_img/Gardens.png" alt="gardens text"></li>
+                    <li class="service_type"><img src="./img/service_img/Gardens.png" alt="gardens text"></li>
                     <li class="service_type"><img src="./img/service_img/Lawn.png" alt="lawn text"></li>
                     <li class="service_type"><img src="./img/service_img/Planting-text.png" alt="planting text"></li>
                 </ul>
