--- a/plants/index.html
+++ b/plants/index.html
@@ -164,7 +164,7 @@
             <div class="footer_description">
                 <img class="footer_item footer_logo" src="./img/footer_img/©.svg" alt="logo">
                 <p class="footer_item date">2022</p>
-                <p class="footer_item github">github</p>
+                  <a href="https://github.com/ZagarovaGS/ZagarovaGS.github.io" class="footer_item github">github</a>
             </div>
             <div class="schools_link">
                 <a href="https://rs.school/js-stage0/">Rolling Scopes School
