--- a/plants/index.html
+++ b/plants/index.html
@@ -20,16 +20,16 @@
         </div>
         <nav class="nav">
             <ul class="header-menu">
-                <li class="home">Home</li>
-                <li>About us</li>
-                <li>Service</li>
-                <li>Price</li>
-                <li>Contacts</li>
+                <li><a htef="#welcome">Home</a></li>
+                <li><a href="#about">About us</a></li>
+                <li><a href="#service">Service</a></li>
+                <li><a href="#price">Price</a></li>
+                <li><a href="#contacts">Contacts</a></li>
             </ul>
         </nav>
     </header>
     <main class="main">
-        <section class="welcome">
+        <section id="welcome" class="welcome">
             <div class="welcome-img">
                 <div class="leafs1-2">
                     <img src="./img/welcome_img/leaf_2.png" class="leaf-2" alt="leaf 2">
@@ -57,7 +57,7 @@
                 <button class="welcome__button">LEARN MORE</button>
             </div>
         </section>
-        <section class="about">
+        <section id="about" class="about">
             <div class="about_description">
                 <h2 class="about_header"><img src="./img/about_img/about_header.png"
                         alt="houseplant header"></h2>
@@ -67,7 +67,7 @@
             </div>
             <div class="about_img"><img src="./img/about_img/houseplant_1.png" alt="houseplant"></div>
         </section>
-        <section class="service">
+        <section id="service" class="service">
             <div class="service_text">
                <h2 class="service__header">Service and our projects</h2>
                 <ul class="service_types">
@@ -109,7 +109,7 @@
                 </li>
             </ul>
         </section>
-        <section class="prices">
+        <section id="price" class="prices">
             <div class="prices_desrription">
                 <h2 class="prices__header">Prices</h2>
                 <ul class="prices_types">
@@ -149,7 +149,7 @@
                 </div>
             </div>
         </section>
-        <section class="contacts">
+        <section id="contacts" class="contacts">
             <img src="./img/contacts_img/contact_woman_1.png" alt="woman" class="contact_img">
             <h2 class="contacts__header">Contact us
             </h2>
