--- a/plants/index.html
+++ b/plants/index.html
@@ -170,13 +170,16 @@
                 <a href="https://rs.school/js-stage0/">Rolling Scopes School
                 </a>
             </div>
-            <div class="schools_communitiers">
-                <img src="./img/footer_img/insta.png" alt="instagam logo" class="schools_communitiers-item insta">
-                <img src="./img/footer_img/facebook.png" alt="facebook logo" class="schools_communitiers_item facebook">
-                <img src="./img/footer_img/twitter.png" alt="twitter logo" class="schools_communitiers_item twitter">
-                <img src="./img/footer_img/community.png" alt="community logo"
-                    class="schools_communitiers_item community">
-            </div>
+            <ul class="schools_communitiers">
+                  <li><a href="#"><img src="./img/footer_img/insta.png" alt="instagam logo"
+                            class="schools_communitiers-item insta"></a></li>
+                <li><a href="#"><img src="./img/footer_img/facebook.png" alt="facebook logo"
+                            class="schools_communitiers_item facebook"></a></li>
+                <li><a href="#"><img src="./img/footer_img/twitter.png" alt="twitter logo"
+                            class="schools_communitiers_item twitter"></a></li>
+                <li><a href="#"><img src="./img/footer_img/community.png" alt="community logo"
+                            class="schools_communitiers_item community"></a></li>
+            </ul>
         </footer>
     </main>
 </body>
