--- a/plants/index.html
+++ b/plants/index.html
@@ -111,9 +111,9 @@
             <div class="prices_desrription">
                 <h2 class="prices__header">Prices</h2>
                 <ul class="prices_types">
-                    <li class="price_item"><img src="./img/prices_img/Ellipse 5 (1).svg" class="price_item__circle"
-                            alt="circle"><img src="./img/prices_img/Vector 3.svg" class="vector_3" alt="mark"><img
-                            src="./img/prices_img/Vector 4.svg" class="vector_4" alt="mark"> <b>Basics</b>
+                    <li class="price_item"><img src="./img/prices_img/Ellipse5.svg" class="price_item__circle"
+                            alt="circle"><img src="./img/prices_img/Vector_3.svg" class="vector_3" alt="mark"><img
+                            src="./img/prices_img/Vector_4.svg" class="vector_4" alt="mark"> <b>Basics</b>
                     </li>
                     <li class="price_item"><img src="./img/prices_img/Ellipse 5 (1).svg" class="price_item__circle"
                             alt="circle"><img src="./img/prices_img/Vector 3.svg" class="vector_3" alt="mark"><img
