--- a/plants/index.html
+++ b/plants/index.html
@@ -20,7 +20,7 @@
         </div>
         <nav class="nav">
             <ul class="header-menu">
-                <li><a htef="#welcome">Home</a></li>
+                <li><a href="#welcome">Home</a></li>
                 <li><a href="#about">About us</a></li>
                 <li><a href="#service">Service</a></li>
                 <li><a href="#price">Price</a></li>
