--- a/plants/plants/index.html
+++ b/plants/plants/index.html
@@ -33,7 +33,7 @@
             <div class="burger_menu"><img src="./img/header_img/burger.png"></div>
             <nav class="nav">
                 <ul class="header-menu">
-                    <li><a htef="#welcome">Home</a></li>
+                    <li><a href="#welcome">Home</a></li>
                     <li><a href="#about">About us</a></li>
                     <li><a href="#service">Service</a></li>
                     <li><a href="#price">Price</a></li>
