--- a/plants/plants/index.html
+++ b/plants/plants/index.html
@@ -13,13 +13,13 @@
     <div class="header_wrapper">
         <nav class="mobile_header_menu hidden">
             <img src="./img/header_img/cross.svg" alt="cross" class="cross">
-            <div class="mobile_items">
+            <ul class="mobile_items">
                 <li><a class="nav_link" htef="#welcome">Home</a></li>
                 <li><a class="nav_link" href="#about">About us</a></li>
                 <li><a class="nav_link" href="#service">Service</a></li>
                 <li><a class="nav_link" href="#price">Price</a></li>
                 <li><a class="nav_link" href="#contacts">Contacts</a></li>
-            </div>
+            </ul>
             <img src="./img/prices_img/leaf_2.png" alt="leafs" class="leaf_2">
         </nav>
         <header class="header">
