--- a/plants/plants/index.html
+++ b/plants/plants/index.html
@@ -14,7 +14,7 @@
         <nav class="mobile_header_menu hidden">
             <img src="./img/header_img/cross.svg" alt="cross" class="cross">
             <ul class="mobile_items">
-                <li><a class="nav_link" htef="#welcome">Home</a></li>
+                <li><a class="nav_link" href="#welcome">Home</a></li>
                 <li><a class="nav_link" href="#about">About us</a></li>
                 <li><a class="nav_link" href="#service">Service</a></li>
                 <li><a class="nav_link" href="#price">Price</a></li>
