--- a/plants/plants/index.html
+++ b/plants/plants/index.html
@@ -30,7 +30,7 @@
                 </div>
                 <p class="description-text">Plants</p>
             </div>
-            <div class="burger_menu"><img src="./img/header_img/burger.png"></div>
+            <div class="burger_menu"><img src="./img/header_img/burger.png" alt="burger-menu"></div>
             <nav class="nav">
                 <ul class="header-menu">
                     <li><a href="#welcome">Home</a></li>
@@ -46,7 +46,7 @@
         <div class="welcome_wrapper">
             <section id="welcome" class="welcome">
                 <div class="welcome-img">
-                    <div class="leafs"><img src="./img/welcome_img/leafs.png"> </div>
+                    <div class="leafs"><img src="./img/welcome_img/leafs.png" alt="leafs"> </div>
                 </div>
                 <div class="welcome__description">
                     <div>
