--- a/plants/plants/index.html
+++ b/plants/plants/index.html
@@ -186,6 +186,7 @@
                 <div class="select_city">
                     <select name="city_header" class="city_header">City
                         <option value="Canandaigua, NY">City</option>
+                        <option value="New York">City</option>
                     </select>
                 </div>
             </section>
