--- a/plants/plants/index.html
+++ b/plants/plants/index.html
@@ -185,8 +185,8 @@
                 </h2>
                 <div class="select_city">
                     <select name="city_header" class="city_header">City
-                        <option value="Canandaigua, NY">City</option>
-                        <option value="New York">City</option>
+                        <option value="Canandaigua, NY">Canandaigua, NY</option>
+                        <option value="New York">New York</option>
                     </select>
                 </div>
             </section>
