--- a/plants/plants/index.html
+++ b/plants/plants/index.html
@@ -184,7 +184,7 @@
                 <h2 class="contacts__header">Contact us
                 </h2>
                 <div class="select_city">
-                    <select name="city_header" class="city_header">City
+                    <select name="city_header" class="city_header">
                         <option value="Canandaigua, NY">Canandaigua, NY</option>
                         <option value="New York">New York</option>
                     </select>
