--- a/plants/plants/plants3/index.html
+++ b/plants/plants/plants3/index.html
@@ -271,7 +271,7 @@
                             <div class="city_part3">Office adress:</div>
                             <div class="city_address">151 Charlotte Street</div>
                         </div>
-                        <a href="+15853930001" class="call_button">Call us</a>
+                        <a href="tel:+15853930001" class="call_button">Call us</a>
                     </div>
 
                     <div class="city_card select2_city hidden">
@@ -287,7 +287,7 @@
                             <div class="city_part3">Office adress:</div>
                             <div class="city_address">151 Charlotte Street</div>
                         </div>
-                        <a href="+12124560002" class="call_button">Call us</a>
+                        <a href="tel:+12124560002" class="call_button">Call us</a>
                     </div>
 
 
@@ -304,7 +304,7 @@
                             <div class="city_part3">Office adress:</div>
                             <div class="city_address">511 Warburton Ave</div>
                         </div>
-                        <a href="+19146780003" class="call_button">Call us</a>
+                        <a href="tel:+19146780003" class="call_button">Call us</a>
                     </div>
 
                     <div class="city_card select4_city hidden">
@@ -320,7 +320,7 @@
                             <div class="city_part3">Office adress:</div>
                             <div class="city_address">14 WEST Noyes BLVD</div>
                         </div>
-                        <a href="+19146780003" class="call_button">Call us</a>
+                        <a href="tel:+19146780003" class="call_button">Call us</a>
                     </div>
                 </div>
             </section>
