--- a/plants/plants/plants3/index.html
+++ b/plants/plants/plants3/index.html
@@ -143,7 +143,7 @@
                                 alt="circle"><img src="./img/prices_img/Vector3.svg" class="vector_3" alt="mark"><img
                                 src="./img/prices_img/Vector4.svg" class="vector_4" alt="mark"> <b>Basics</b>
                         </li>
-                        <div class="price_card hidden">
+                        <li class="price_card hidden">
                             <div class="price_header">
                                 <div class="price_name">Basics</div>
                                 <button class="accordion_btn">
@@ -162,7 +162,7 @@
                             </div>
                             <button class="price_order_button"><a class="contacts-href"
                                     href="#contacts">Order</a></button>
-                        </div>
+                        </li>
 
 
                         <li class="price_item"><img src="./img/prices_img/Ellipse5.svg" class="price_item__circle"
@@ -171,7 +171,7 @@
                         </li>
 
 
-                        <div class="price_card hidden">
+                        <li class="price_card hidden">
                             <div class="price_header">
                                 <div class="price_name">Standard</div>
                                 <button class="accordion_btn">
@@ -190,14 +190,14 @@
                             </div>
                             <button class="price_order_button"><a class="contacts-href"
                                     href="#contacts">Order</a></button>
-                        </div>
+                        </li>
                         <li class="price_item"><img src="./img/prices_img/Ellipse5.svg" class="price_item__circle"
                                 alt="circle"><img src="./img/prices_img/Vector3.svg" class="vector_3" alt="mark"><img
                                 src="./img/prices_img/Vector4.svg" class="vector_4" alt="mark"><b>Pro care</b>
                         </li>
 
 
-                        <div class="price_card hidden">
+                        <li class="price_card hidden">
                             <div class="price_header">
                                 <div class="price_name">Pro care</div>
                                 <button class="accordion_btn">
@@ -216,7 +216,7 @@
                             </div>
                             <button class="price_order_button"><a class="contacts-href"
                                     href="#contacts">Order</a></button>
-                        </div>
+                        </li>
                     </ul>
                 </div>
                 <div class="price_ad">
