--- a/plants/plants/plants3/index.html
+++ b/plants/plants/plants3/index.html
@@ -160,8 +160,8 @@
                             <div class="price_size"><img src="./img/prices_img/per_hour15.png" alt="price-per-hour"
                                     class="per_our">
                             </div>
-                            <button class="price_order_button"><a class="contacts-href"
-                                    href="#contacts">Order</a></button>
+                            <div class="price_order_button"><a class="contacts-href"
+                                    href="#contacts">Order</a></div>
                         </li>
 
 
@@ -188,8 +188,8 @@
                             <div class="price_size"><img src="./img/prices_img/per_hour.png" alt="price-per-hour"
                                     class="per_our">
                             </div>
-                            <button class="price_order_button"><a class="contacts-href"
-                                    href="#contacts">Order</a></button>
+                            <div class="price_order_button"><a class="contacts-href"
+                                    href="#contacts">Order</a></div>
                         </li>
                         <li class="price_item"><img src="./img/prices_img/Ellipse5.svg" class="price_item__circle"
                                 alt="circle"><img src="./img/prices_img/Vector3.svg" class="vector_3" alt="mark"><img
@@ -214,8 +214,8 @@
                             <div class="price_size"><img src="./img/prices_img/per_hour35.png" alt="price-per-hour"
                                     class="per_our">
                             </div>
-                            <button class="price_order_button"><a class="contacts-href"
-                                    href="#contacts">Order</a></button>
+                            <div class="price_order_button"><a class="contacts-href"
+                                    href="#contacts">Order</a></div>
                         </li>
                     </ul>
                 </div>
